# GitHub-CoPilot-BestPractice

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  README_structure.md  copilot_ansible.txt  copilot_fastapi.txt  copilot_pytorch.txt  copilot_react.txt  copilot_root.txt  docker-compose.yml  pyproject_toml.txt  setup_script.ps1  setup_script.sh  vscode_settings.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: ansible.instructions.md  fastapi.instructions.md  python.instructions.md  pytorch.instructions.md  typescript.instructions.md
.github/prompts/: code-review.prompt.md  debug.prompt.md  new-feature.prompt.md
.github/workflows/: ci.yml
ansible-infra/: AGENTS.md  site.yml
ansible-infra/.github/: copilot-instructions.md
fastapi-backend/: AGENTS.md  pyproject.toml  requirements.txt
fastapi-backend/.github/: copilot-instructions.md
fastapi-backend/src/: main.py
pytorch-ai-backend/: AGENTS.md  pyproject.toml  requirements.txt
pytorch-ai-backend/.github/: copilot-instructions.md
pytorch-ai-backend/src/: main.py
react-frontend/: AGENTS.md  package.json
react-frontend/.github/: copilot-instructions.md
react-frontend/src/: App.tsx
